# cpp-task

./: README.md
binance-server/: app.js  package-lock.json
binance-server/certificate/: dafa.pem
bitstamp-server/: app.js  package.json
bitstamp-server/certificate/: dafa.csr  dafa.key
cpp/: CMakeLists.txt  binance_order_book.txt  bitstamp_order_book.txt  main.cpp
